--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,98 @@
 body{
-    margin : 0px ;
-    padding : 0px ;
+    font-family: "Inter", sans-serif;
+    margin: 0px ;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #23252C ;
+    padding: 10px 0px;
 }
-
 #root{
-    height : 100vh ;
-    width :100% ;
-    display : flex;
-    align-items : center ;
-    justify-content: center ;  
-    background-color : #23252C ;
-}
-.container{
-    width :350px ;
-    height: 80vh ;
-    text-align : center
-    border : 10px solid black ;
+    padding: 20px;
+    min-height: 100vh ;
+    width:400px ;
+    box-sizing: border-box;
+    background-color: #1A1B21;
+    border-radius: 10px;
 }
 .avatar-img{
-    height: 217px;
-    width: 217px ;
+    border-radius: 10px;
+    background-color: #1A1B21;
+    width: 100%;
+    height: 277px;
+    margin: 0px;
+
+}
+.contents{
+    margin: 0px;
+    min-height : 399px;
+    text-align: center;
+    color: white;
+    /* border: 2px solid green; */
+}
+.contents h1{
+    font-size: 25px;
+    margin: 10px 0px;
+    padding: 0px;
+    font-weight: bold;
+}
+.contents h4{
+    margin: 5px 0px;
+    padding: 0px;
+    font-size: 13px;
+    font-weight : normal;
+}
+a{
+    font-size: 11px;
+    margin: 10px 0px 15px 0px ;
+    display: block;
+}
+.buttons{
+    margin: auto;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.btn{
+    border: none;
+    outline: none;
+    text-align: center;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+}
+.btn  img{
+    margin-right: 10px;
+} 
+#linkedin-btn{ 
+    color: white;
+    background-color:#5093E2 ;
+    font-size: 14px;
+    font-weight: 600;
+}
+#email-btn{    
+    color: black;
+    background-color:white ;
+    font-size: 14px;
+    font-weight: 550;
+}
+.content2{
+    text-align: left;
+}
+.content2 p{
+    font-size: 12px;
+}
+.content2 h3{
+    margin: 30px 0px 0px 0px ;
+    font-size: 21px;
+}
+.footer{
+    display: flex;
+    justify-content: space-around;
+}
+.footer img{
+    height: 30px;
+    width: 30px;
 }
