--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ a{
     border-radius: 5px;
     width: 100px;
     height: 30px;
+    cursor: pointer;
 }
 .btn  img{
     margin-right: 10px;
@@ -93,6 +94,6 @@ a{
     justify-content: space-around;
 }
 .footer img{
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
 }
